# Turn-Based-Projects

./: README.md
cpp/: .gitignore  Arena.cpp  Arena.h  Battle.cpp  Battle.sln  CMakeLists.txt  Entity.cpp  Entity.h  Makefile
cpp/Battle/: Arena.cpp  Arena.h  Battle.cpp  Battle.vcxproj  Battle.vcxproj.filters  Entity.cpp  Entity.h
cpp/include/: Arena.h  Entity.h
cpp/src/: Arena.cpp  Battle.cpp  Entity.cpp  main.cpp
cpp20/: .gitignore  cpp20.sln
cpp20/cpp20/: arena.ixx  cpp20.vcxproj  cpp20.vcxproj.filters  entity.ixx  main.cpp
csharp/: Arena.cs  Entity.cs  Program.cs  Utils.cs
fsharp/: Arena.fs  Entity.fs  Program.fs  Utils.fs  fsharp.fsproj
haxe/: Arena.hx  Entity.hx  Main.hx  build.hxml
kotlin/: .gitignore  main.kt
kotlin/org/turn/: Arena.kt  Entity.kt
lua/: .gitignore  arena.lua  entity.lua  main.lua
php/: arena.php  entity.php  index.php
python/: arena.py  entity.py  main.py
rust/: Cargo.toml
rust/src/: arena.rs  entity.rs  main.rs
rust/src/arena/: arena.rs
rust/src/entities/: entity.rs
teal/: tlconfig.lua
teal/src/: arena.tl  entity.tl  main.tl
typescript/: .gitignore  package.json  tsconfig.json
typescript/src/: arena.ts  entity.ts  index.ts
